# cinema

./: CMakeLists.txt  booking.cpp  booking.h  booking.ui  cinema.cpp  cinema.h  cinema.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  signup.cpp  signup.h  signup.ui
